--- a/deliverables/04-milestone/dev/typography-guide.html
+++ b/deliverables/04-milestone/dev/typography-guide.html
@@ -57,39 +57,61 @@ Over 90% of North America's old growth forests are have been cut down or lumbere
 </blockquote>
 	
 	<table>
-	<caption>Black Market Prices for certain woods</caption>
-	<thead>
-	  <tr>
-	  <th> </th>
-	  <th scope="col">1m<sup>3</sup></th>
-	  <th scope="col">10m<sup>3</sup></th>
-	  <th scope="col">100m<sup>3</sup></th>
-	  </tr>
-	</thead>
-	<tbody>
-		<tr>
-			<th>Bristlecone Pine</th>
-			<td>$15k</td>
-			<td>$150k</td>
-			<td>$1.5m</td>
-		</tr>
-		<tr>
-			<th>Californian Coastal Redwood</th>
-			<td>$7k</td>
-			<td>$70k</td>
-			<td>$700k</td>
-		</tr>
-		<tr>
-			<th>Western Juniper</th>
-			<td>$2k</td>
-			<td>$20k</td>
-			<td>$200k</td>
-		</tr>
-	</tbody>
-	<tfoot>
-		<tr>As of Jan 2015</tr>
-	</tfoot>
-</table>	
+		<caption>Black Market Prices for certain woods</caption>
+		<thead>
+		  <tr>
+		  <th> </th>
+		  <th scope="col">1m<sup>3</sup></th>
+		  <th scope="col">10m<sup>3</sup></th>
+		  <th scope="col">100m<sup>3</sup></th>
+		  </tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Bristlecone Pine</th>
+				<td>$15k</td>
+				<td>$150k</td>
+				<td>$1.5m</td>
+			</tr>
+			<tr>
+				<th>Californian Coastal Redwood</th>
+				<td>$7k</td>
+				<td>$70k</td>
+				<td>$700k</td>
+			</tr>
+			<tr>
+				<th>Western Juniper</th>
+				<td>$2k</td>
+				<td>$20k</td>
+				<td>$200k</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>As of Jan 2015</tr>
+		</tfoot>
+	</table>	
+	
+	<dl>
+		<dt>Pinus (Pines)</dt>
+			<dd>Jack Pine</dd>
+			<dd>Eastern White Pine</dd>
+			<dd>Red Pine</dd>
+			<dd>Great Basin Bristlecone Pine</dd>
+			<dd>Western White Pine</dd>
+		<dt>Quercus (Oak)</dt>
+			<dd>White Oak</dd>
+			<dd>Golden Oak</dd>
+			<dd>Black Oak</dd>
+			<dd>Macedonian Oak</dd>
+			<dd>Portuguese Oak</dd>
+		<dt>Acer (Maple)</dt>
+			<dd>Greek Maple</dd>
+			<dd>Sycamore Maple</dd>
+			<dd>Velvet Maple</dd>
+			<dd>Sugar Maple</dd>
+			<dd>Black Maple</dd>
+	</dl>		
+
 
 </body>
 </html>
