--- a/deliverables/04-milestone/dev/typography-guide.html
+++ b/deliverables/04-milestone/dev/typography-guide.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Typography Test</title>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,400,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+<link href="css/typography.css" rel="stylesheet">
 </head>
 
 <body>
