feat(css): styled hover state for a
link, visited, hover, and focus have dif. attributes.

--- a/deliverables/04-milestone/dev/typography-guide.html
+++ b/deliverables/04-milestone/dev/typography-guide.html
@@ -12,7 +12,7 @@
 
 	<h1>This is an H1 — Page Title</h1>
 	
-	<h2>This is an H2 —  Article Title or on-page Title <a href="#">Possible story link</a></h2>
+	<h2>This is an H2 —  Article Title or on-page Title <a href="http://www.google.com">Possible story link</a></h2>
 	
 	<h3>This is an H3 — Article Grid &amp; Bucket Title <a href="#">Possible bucket link</a></h3>
 	
