feat(css): figure & caption styled
“figure” class also created for divs to contain element

--- a/deliverables/04-milestone/dev/typography-guide.html
+++ b/deliverables/04-milestone/dev/typography-guide.html
@@ -74,11 +74,13 @@ Over 90% of North America's old growth forests are have been cut down or lumbere
 			<dd>Sugar Maple</dd>
 			<dd>Black Maple</dd>
 	</dl>	
-
-	<figure>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/b/be/Prometheus_Wheeler.jpg" alt="bristlecone pine tree">
-		<figcaption>Some Bristlecone Pine Trees are older than the earliest pyramids</figcaption>
-	</figure>
+	
+	<div class="figure">
+		<figure>
+			<img src="http://upload.wikimedia.org/wikipedia/commons/b/be/Prometheus_Wheeler.jpg" alt="bristlecone pine tree">
+			<figcaption>Some Bristlecone Pine Trees are older than the earliest pyramids.</figcaption>
+		</figure>
+	</div>
 		
 	<table>
 		<caption>Black Market Prices for certain woods</caption>
