--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Ametican Forest Foundation</title>
+  <title>Ametican Forest Foundation </title>
+  <meta name="handheldfriendly" content="true">
+	<meta name="mobileoptimized" content="240">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
