--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body>
+<body class="noscript">
+
+	<div class="site-wrapper">
+
+		<header>
+
+		</header>
+
+		<main>
+
+		</main>
+
+		<footer>
+
+		</footer>
+
+	</div> <!-- Site Wrapper -->
 
 </body>
 </html>
