feat(css):Add typography.css
Add initial typography.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Ametican Forest Foundation </title>
+  <title>American Forest Foundation </title>
+  <link rel="stylesheet" type="text/css" href="css/typography.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
@@ -12,7 +13,10 @@
 
 	<div class="site-wrapper">
 
-		<header>
+		<header class="-wrapper">
+			<div class="header-container">
+
+			</div>
 
 		</header>
 
