feat(css): style header navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>American Forest Foundation </title>
-  <link rel="stylesheet" type="text/css" href="css/typography.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
@@ -13,10 +12,18 @@
 
 	<div class="site-wrapper">
 
-		<header class="-wrapper">
-			<div class="header-container">
+		<header class="header grid">
+			<img class="logo" src="" alt="Logo">
 
-			</div>
+			<nav class="unit nav top-nav">
+				<ul class=" unit unit-l-1">
+					<li class="unit unit-l-1-5"><a href="#">About Us</a></li>
+					<li class="unit unit-l-1-5"><a href="#">What We Do</a></li>
+					<li class="unit unit-l-1-5"><a href="#">Partners and Media</a></li>
+					<li class="unit unit-l-1-5"><a href="#">Our Advocacy</a></li>
+					<li class="unit unit-l-1-5"><a href="#">Contact</a></li>
+				</ul>
+			</nav>
 
 		</header>
 
