--- a/index.html
+++ b/index.html
@@ -15,23 +15,69 @@
 		<header class="header grid">
 			<img class="logo" src="" alt="Logo">
 
-			<nav class="unit nav top-nav">
+			<nav class="unit top-nav">
 				<ul class=" unit unit-l-1">
 					<li class="unit unit-l-1-5"><a href="#">About Us</a></li>
 					<li class="unit unit-l-1-5"><a href="#">What We Do</a></li>
 					<li class="unit unit-l-1-5"><a href="#">Partners and Media</a></li>
 					<li class="unit unit-l-1-5"><a href="#">Our Advocacy</a></li>
-					<li class="unit unit-l-1-5"><a href="#">Contact</a></li>
+					<li class="unit unit-l-1-5"><a href="#">Donations</a></li>
 				</ul>
 			</nav>
 
 		</header>
 
 		<main>
-
+			<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A veritatis quam asperiores molestiae omnis, veniam deleniti quae mollitia delectus. Tempora error quidem iusto blanditiis odit placeat illum, consequatur rerum ut.</span>
+			<span>Consectetur odio illo obcaecati maxime fugit quia officiis eligendi quos debitis vero. Assumenda quasi perspiciatis fugit. Vel sapiente maxime quibusdam! Minima, officia, unde animi quas eaque facere ex error et.</span>
+			<span>Maiores officiis quidem quia, repellat mollitia odio sapiente. At fugiat sed quas esse nobis sit nihil adipisci minus asperiores placeat in labore, repellat facere sunt rerum blanditiis reiciendis, tempore maxime.</span>
+			<span>Eius nulla, quibusdam inventore esse qui placeat dolore voluptatibus fugit totam quidem blanditiis alias nam aspernatur delectus, molestias illum soluta obcaecati expedita assumenda. Fugiat placeat quam, dolores perferendis saepe cum.</span>
+			<span>At alias nobis reiciendis tempora excepturi hic, consectetur dignissimos temporibus, minima debitis dolore in recusandae, suscipit voluptate? Nisi, sed, delectus laudantium dolorem eligendi cum quod quos, cumque neque dolor corporis.</span></p>
 		</main>
 
-		<footer>
+		<footer class=" grid footer">
+			<nav class="unit unit-l-1 bottom-nav">
+				<ul class class="unit unit-l-1">
+
+					<li class="unit unit-l-1-5"><a href="a">About Us</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-l-1-5"><a href="a">What We Do</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-l-1-5"><a href="a">Partners and Media</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-l-1-5"><a href="a">Our Advocacy</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-l-1-5"><a href="a">Donations</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
 
 		</footer>
 
