--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 	<div class="site-wrapper">
 
 		<header class="header grid">
-			<img class="logo" src="" alt="Logo">
 
-			<nav class="unit top-nav">
+			<img class="logo" src="" alt="Logo">
+			<a class="hb-toggle" href="#">
+				<span></span>
+			</a>
+
+			<h3 class="tag-line">We help the environment and stuff…</h3>
+
+			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-l-1">
 					<li class="unit unit-l-1-5"><a href="#">About Us</a></li>
 					<li class="unit unit-l-1-5"><a href="#">What We Do</a></li>
@@ -80,8 +86,9 @@
 			</nav>
 
 		</footer>
-
 	</div> <!-- Site Wrapper -->
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 
 </body>
 </html>
