fix(html, css, javascript): fix top navigation

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<body class="noscript">
+<body class="noscript site-wrapper">
 
-	<div class="site-wrapper">
+	<div class="site-contaier">
 
 		<header class="header grid">
 
@@ -23,13 +23,15 @@
 
 			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-l-1">
-					<li class="unit unit-l-1-5"><a href="#">About Us</a></li>
-					<li class="unit unit-l-1-5"><a href="#">What We Do</a></li>
-					<li class="unit unit-l-1-5"><a href="#">Partners and Media</a></li>
-					<li class="unit unit-l-1-5"><a href="#">Our Advocacy</a></li>
-					<li class="unit unit-l-1-5"><a href="#">Donations</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">About Us</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">What We Do</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners & Media</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Our Advocacy</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Donations</a></li>
 				</ul>
 			</nav>
+
+
 
 		</header>
 
