--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h3 class="tag-line">We help the environment and stuff…</h3>
 
 			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
-				<ul class=" unit unit-l-1">
+				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">About Us</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">What We Do</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners & Media</a></li>
@@ -44,10 +44,10 @@
 		</main>
 
 		<footer class=" grid footer">
-			<nav class="unit unit-l-1 bottom-nav">
-				<ul class class="unit unit-l-1">
+			<nav class="unit unit-s-1 unit-m-1 unit-l-1 bottom-nav">
+				<ul class="unit unit-s-1 unit-m-1 unit-l-1">
 
-					<li class="unit unit-l-1-5"><a href="a">About Us</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">About Us</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -55,7 +55,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-l-1-5"><a href="a">What We Do</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">What We Do</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -63,7 +63,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-l-1-5"><a href="a">Partners and Media</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Partners and Media</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -71,7 +71,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-l-1-5"><a href="a">Our Advocacy</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Our Advocacy</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -79,7 +79,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-l-1-5"><a href="a">Donations</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Donations</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 						</ul>
