fix(html) saving the enviro with proper ellipses

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ meta-keywords: home, forest, american, america, tree, foundation, environmental,
 				<span></span>
 			</a>
 
-			<h3 class="tag-line">We help the environment and stuff…</h3>
+			<h3 class="tag-line">We help the environment and stuff&hellip;</h3>
 
 			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
