fix(html) saving the enviro with proper ampersands

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ meta-keywords: home, forest, american, america, tree, foundation, environmental,
 				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">About Us</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">What We Do</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners & Media</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners &amp; Media</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Our Advocacy</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Donations</a></li>
 				</ul>
