--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ meta-keywords: home, forest, american, america, tree, foundation, environmental,
 
 			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">About Us</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">What We Do</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners &amp; Media</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Our Advocacy</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Donations</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="media.html">Partners &amp; Media</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
 				</ul>
 			</nav>
 
