--- a/about.html
+++ b/about.html
@@ -4,5 +4,14 @@ title: About Us
 meta-desc: About the American Forest Foundation
 meta-keywords: about, forest, american, america, tree, foundation, environmental, protection
 ---
+<main>
+	<h1>About Us</h1>
 
-<h1>About Us</h1>
+	<p class="unit xs-1 s-1 m-3-4 l-1-2">The American Forest Foundation (AFF) works on-the-ground with families, teachers and elected officials to promote stewardship and protect the values provided by our nation's forest heritage. A commitment to the next generation unites our nationwide network of forest owners and teachers. These devoted professionals work to keep our forests healthy and our children well-prepared for the future they will inherit.</p>
+	<figure class="unit xs-1 s-1 m-3-4 l-1-3"><img src="http://placehold.it/350x150">
+		<figcaption>
+		</figcaption>
+	</figure>
+
+	<p>AFF works nationwide and in partnership with local, state and national groups to address ecological and economic challenges that require the engagement of family forest owners.</p>
+</main>
