refactor(html): changed h1 to match "Our Advocacy"

--- a/advocacy.html
+++ b/advocacy.html
@@ -5,4 +5,4 @@ meta-desc: What the American Forest Foundation advocates
 meta-keywords: advocacy, work, environmental, education forest, american, america, tree, foundation, protection
 ---
 
-<h1>Advocacy</h1>
+<h1>Our Advocacy</h1>
