--- a/donate.html
+++ b/donate.html
@@ -5,4 +5,7 @@ meta-desc: Donate to the American Forest Foundation
 meta-keywords: about, work, environmental, education forest, american, america, tree, foundation, protection
 ---
 
-<h1>Your Money Will Feed the Trees</h1>
+<h1>Support America's Forests!</h1>
+<p>When you give to the American Forest Foundation, you are ensuring a healthy future for our nation’s forests and educating the next generation of Americans about the environmental challenges they will face.</p>
+<p>Below, find out how much forested land your donation will help us sustainably manage and how many students your donation will provide with top-notch forest and conservation education.</p>
+<p>100% of your contribution goes towards our programs. Nothing goes to administration or overhead.</p>
