--- a/donate.html
+++ b/donate.html
@@ -6,8 +6,12 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 ---
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
-	<h1>Your money feeds the trees!</h1>
+	<h1 class="w700">Your money feeds the trees!</h1>
 	<p>When you give to the American Forest Foundation, you are ensuring a healthy future for our nation's forests and educating the next generation of Americans about the environmental challenges they will face.</p>
 	<p>Below, find out how much forested land your donation will help us sustainably manage and how many students your donation will provide with top-notch forest and conservation education.</p>
-	<p>100% of your contribution goes towards our programs. Nothing goes to administration or overhead.</p>
+	<p>100% of your contribution goes towards our programs. <em>Nothing goes to administration or overhead.</em></p>
+</div>
+
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	
 </div>
