--- a/donate.html
+++ b/donate.html
@@ -15,7 +15,8 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
 	<div class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<h3>$25</h3>
-		<p>Helps us continue the sustainable management of 94 acres and provides 3 students with top-notch environmental education.</p>
+		<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
+		Environmental Education for <strong>3 students</strong>.</p>
 	</div>
 	<div class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<form class="">
