--- a/donate.html
+++ b/donate.html
@@ -13,15 +13,35 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 </div>
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
-	<div class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<h3>$25</h3>
 		<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
 		Environmental Education for <strong>3 students</strong>.</p>
 	</div>
-	<div class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+		<h3>$50</h3>
+		<p><strong>189 acres</strong> of Sustainably Managed Forests <br />
+		Environmental Education for <strong>7 students</strong>.</p>
+	</div>
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+		<h3>$100</h3>
+		<p><strong>378 acres</strong> of Sustainably Managed Forests <br />
+		Environmental Education for <strong>15 students</strong>.</p>
+	</div>
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+		<h3>$250</h3>
+		<p><strong>944 acres</strong> of Sustainably Managed Forests <br />
+		Environmental Education for <strong>36 students</strong>.</p>
+	</div>
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
+		<h3>$500</h3>
+		<p><strong>1889 acres</strong> of Sustainably Managed Forests <br />
+		Environmental Education for <strong>73 students</strong>.</p>
+	</div>
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<form class="">
 			<fieldset>		
-				<input type="donate" placeholder="Your Amount">
+				<input type="donate" placeholder="Your Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">
 			</fieldset>
 		</form>	
 	</div>
