--- a/donate.html
+++ b/donate.html
@@ -12,7 +12,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<p>100% of your contribution goes towards our programs. <em>Nothing goes to administration or overhead.</em></p>
 </div>
 
-<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object donations">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<h3>$25</h3>
 		<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
