feat(donate): style input amount

--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<form class="">
 			<fieldset>		
-				<input type="donate" placeholder="Your Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">
+				<input type="text" placeholder="$ Your Amount " class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">
 			</fieldset>
 		</form>	
 	</div>
