fix(donate): repair of selected-donation checkbox
+ Radio button does not appear.
+ Text appears indicating user has selected that donation amount.
+ Background indicator of selection

--- a/donate.html
+++ b/donate.html
@@ -13,6 +13,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 </div>
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object donations">
+	<h2>How your donation helps</h2>
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<h3>$25</h3>
 		<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
@@ -41,8 +42,41 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button">
 		<form class="">
 			<fieldset>		
-				<input type="text" placeholder="$ Your Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">
+				<input type="text" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">
 			</fieldset>
 		</form>	
 	</div>
+</div>
+
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	<h2>Payment Information</h2>
+	<p>When you give to the American Forest Foundation, you are ensuring a healthy future for our nation's forests and educating the next generation of Americans about the environmental challenges they will face.</p>
+	<h2>Dedicate your Donation</h2>
+	<form action="#" method="post">
+    Name <input type="text" placeholder="First name"/>
+    <input type="text" placeholder="Last name"/>
+    Email <input type="text"/>
+    Message <input type="textarea"/>
+    <input type="submit" value="Send"/>
+	</form>
+
+	<h2>Giving Option</h2>
+</div>
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object wrap">
+	<form>
+		<fieldset>
+			<label for="25" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>$25</h3>
+				<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>3 students</strong>.</p>
+				<input type="radio" for="50"  name ="amount" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			<label for="50" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>$50</h3>
+				<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>3 students</strong>.</p>
+				<input type="radio" for="50"  name ="amount" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			</fieldset>
+	</form>
 </div>
