--- a/donate.html
+++ b/donate.html
@@ -53,7 +53,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<p>When you give to the American Forest Foundation, you are ensuring a healthy future for our nation's forests and educating the next generation of Americans about the environmental challenges they will face.</p>
 	<h2>Dedicate your Donation</h2>
 	<form action="#" method="post">
-    Name <input type="text" placeholder="First name"/>
+    <label for="name">Name </label><input id="name" type="text" placeholder="First name"/>
     <input type="text" placeholder="Last name"/>
     Email <input type="text"/>
     Message <input type="textarea"/>
@@ -65,18 +65,40 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object wrap">
 	<form>
 		<fieldset>
-			<label for="25" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+			<label for="donate25" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
 				<h3>$25</h3>
 				<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
 				Environmental Education for <strong>3 students</strong>.</p>
-				<input type="radio" for="50"  name ="amount" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+				<input type="radio"  id="donate25" value="25" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
 			</label>
-			<label for="50" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+			<label for="donate50" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
 				<h3>$50</h3>
-				<p><strong>94 acres</strong> of Sustainably Managed Forests <br />
-				Environmental Education for <strong>3 students</strong>.</p>
-				<input type="radio" for="50"  name ="amount" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+				<p><strong>189 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>7 students</strong>.</p>
+				<input type="radio" id="donate50" value="50" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
 			</label>
-			</fieldset>
+			<label for="donate100" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>$100</h3>
+				<p><strong>378 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>15 students</strong>.</p>
+				<input type="radio" id="donate100" value="100" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			<label for="donate250" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>$250</h3>
+				<p><strong>944 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>36 students</strong>.</p>
+				<input type="radio" id="donate250" value="250" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			<label for="donate500" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>$500</h3>
+				<p><strong>1889 acres</strong> of Sustainably Managed Forests <br />
+				Environmental Education for <strong>73 students</strong>.</p>
+				<input type="radio" id="donate500" value="500" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			<label for="donatesomething" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">
+				<input type="radio" id="donatemore" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+				<input type="number" id="donatesomething" min="10" max="90000000" name="amount" placeholder="$ Amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-amount">			
+			</label>
+		</fieldset>
 	</form>
 </div>
