--- a/donate.html
+++ b/donate.html
@@ -53,17 +53,19 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	</form>
 </div>
 
-<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object mobile">
 	<h2>Payment Information</h2>
 	<p>When you give to the American Forest Foundation, you are ensuring a healthy future for our nation's forests and educating the next generation of Americans about the environmental challenges they will face.</p>
 	<h2>Dedicate your Donation</h2>
-	<form action="#" method="post">
-    <label for="name">Name </label><input id="name" type="text" placeholder="First name"/>
-    <input type="text" placeholder="Last name"/>
-    Email <input type="text"/>
-    Message <input type="textarea"/>
-    <input type="submit" value="Send"/>
+	<p>This is <em>optional</em>, but if you have a special purpose for your donation, please let us know.</p>
+	<form action="#" method="post" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 wrap center-object">
+    <div class="dedication unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 unit-xxl-1-3 wrap"><label for="firstname">First Name: </label><input type="text"  id="firstname" placeholder="First Name"/></div>
+    <div class="dedication unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 unit-xxl-1-3 wrap"><label for="lastname">Last Name: </label><input type="text"  id="lastname" placeholder="Last Name"/></div>
+    <div class="dedication unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 unit-xl-1-3 unit-xxl-1-3 wrap"><label for="email">E-Mail: </label><input type="email" placeholder="example@provider.com"/></div>
+    <label for="message">Message: </label><textarea id="message" placeholder="In honor of &hellip;" rows="4"></textarea>
 	</form>
 
 	<h2>Giving Option</h2>
+	    <input type="submit" value="Send"/>
+
 </div>
