feat(donate): create giving-option

--- a/donate.html
+++ b/donate.html
@@ -66,6 +66,21 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	</form>
 
 	<h2>Giving Option</h2>
+	<form>
+		<fieldset>
+			<label for="givefull" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>100%</h3>
+				<p>Donate 100% - Add 3% so that 100% of the donation goes to American Forest Foundation.</p>
+				<input type="radio" id="givefull" value="variable" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+			<label for="givemost" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
+				<h3>97%</h3>
+				<p>Donate 97% - I understand Network for Good will deduct 3% to cover transaction costs.</p>
+				<input type="radio" id="givemost" value="variable" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
+			</label>
+
+		</fieldset>
+	</form>
 	    <input type="submit" value="Send"/>
 
 </div>
