--- a/donate.html
+++ b/donate.html
@@ -68,6 +68,9 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<h2>Giving Option</h2>
 	<form>
 		<fieldset>
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 info-box wrap">
+			<p>Your donation is securely processed by our nonprofit partner, Network for Good, with a 3% transaction fee to cover credit card fees, bank fees, and other processing costs. Please consider chipping in an additional 3% so 100% of your donation amount goes to us.</p>
+			</div>
 			<label for="givefull" class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-3 unit-xxl-1-3 donate-button wrap">	
 				<h3>100%</h3>
 				<p>Donate 100% - Add 3% so that 100% of the donation goes to American Forest Foundation.</p>
@@ -78,9 +81,11 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 				<p>Donate 97% - I understand Network for Good will deduct 3% to cover transaction costs.</p>
 				<input type="radio" id="givemost" value="variable" name ="amount" class="unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1 donate-button">
 			</label>
-
 		</fieldset>
 	</form>
+	
+	<small>American Forest Foundation has partnered with <a href="#">Network for Good</a> to securely process your online credit card payment via Network for Good (tax ID 68-0480736). This transaction will appear on your credit card statement as "Network for Good." This transaction is subject to Network for Good's <a href="#">Privacy, Security &amp; Disclosure Statement</a>.</small>
+	
 	    <input type="submit" value="Send"/>
 
 </div>
