feat(html, css): add log in and register button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Partners & Media</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Our Advocacy</a></li>
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="#">Donations</a></li>
+					<li class="unit unit-xs-1-2"><a href="#">Log In</a></li>
+					<li class="unit unit-xs-1-2"><a href="#">Register</a></li>
 				</ul>
+
+
+
 			</nav>
 
 
