--- a/donate.html
+++ b/donate.html
@@ -88,8 +88,9 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 		<h2><a href="#" class="gigantor-donate-button">Proceed to Donate</a></h2>
 	</div>
 	
-	
-	<small>American Forest Foundation has partnered with <a href="#">Network for Good</a> to securely process your online credit card payment via Network for Good (tax ID 68-0480736). This transaction will appear on your credit card statement as "Network for Good." This transaction is subject to Network for Good's <a href="#">Privacy, Security &amp; Disclosure Statement</a>.</small>
+	<div class="xs-1 s-1 m-1 l-1 xl-1 xxl-1 wrap">
+		<p class="unit-xs-1 s-1 m-5-6 l-1-1 xl-1 xxl-1 wrap center-object">American Forest Foundation has partnered with <a href="#">Network for Good</a> to securely process your online credit card payment via Network for Good (tax ID 68-0480736). This transaction will appear on your credit card statement as "Network for Good." This transaction is subject to Network for Good's <a href="#">Privacy, Security &amp; Disclosure Statement</a>.</p>
+	</div>
 	
 	    <input type="submit" value="Send"/>
 
