feat(p&m): news boxes established

--- a/media.html
+++ b/media.html
@@ -5,4 +5,23 @@ meta-desc: The Partners and Media of the American Forest Foundation does
 meta-keywords: about, work, environmental, education forest, american, america, tree, foundation, protection
 ---
 
-<h1>Partners &amp; Media</h1>
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	<h1>Partners &amp; Media</h1>
+	
+	<h2>News</h2>
+
+	[ IMAGE BUCKET SLIDERS? ]
+	AFF is pleased to announce that Michael Law, U.S. CEO of Burson-Marsteller, has been named to the Board of Trustees of the American Forest Foundation. Burson-Marsteller, established in 1953, is a leading global public relations and communications firm.
+	>Read More
+	AFF announces climate commitment in conjunction with the White House
+	Today President Obama announced natural resource-related actions the administration will pursue under the President’s Climate Action Plan, which place unprecedented focus on the potential for U.S. forests and forest products to mitigate the effects of climate change.
+	>Read More
+	
+	<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object">
+	<a href="#" class="atom"><img src="http://placehold.it/250x200" alt="test"></a>
+	<figcaption class="">Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF <br />
+	<a href="#" class="atom">Read More&hellip; </a></figcaption>
+	</figure>		
+	
+
+</div>
