--- a/about.html
+++ b/about.html
@@ -4,9 +4,11 @@ title: About Us
 meta-desc: About the American Forest Foundation
 meta-keywords: about, forest, american, america, tree, foundation, environmental, protection
 ---
-<main class="gutter-2 center-object">
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
 	<h1>About Us</h1>
-	<p class="unit xs-1 s-1 m-3-4 l-1-2">The American Forest Foundation (AFF) works on-the-ground with families, teachers and elected officials to promote stewardship and protect the values provided by our nation's forest heritage. A commitment to the next generation unites our nationwide network of forest owners and teachers. These devoted professionals work to keep our forests healthy and our children well-prepared for the future they will inherit.<br>AFF works nationwide and in partnership with local, state and national groups to address ecological and economic challenges that require the engagement of family forest owners.</p>
-	<figure class="unit xs-1 s-1 m-3-4 l-1-3"><div class="video"><iframe class="gutter" src="//player.vimeo.com/video/78736855?color=88AE50&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/78736855">Meet American Forest Foundation</a> from <a href="http://vimeo.com/americanforestfoundation">American Forest Foundation</a> on <a href="https://vimeo.com">Vimeo</a></p>
-	</figure>
-</main>
+	<p class="unit xs-1 s-1 m-1 l-1-2">The American Forest Foundation (AFF) works on-the-ground with families, teachers and elected officials to promote stewardship and protect the values provided by our nation's forest heritage. A commitment to the next generation unites our nationwide network of forest owners and teachers. These devoted professionals work to keep our forests healthy and our children well-prepared for the future they will inherit.<br>AFF works nationwide and in partnership with local, state and national groups to address ecological and economic challenges that require the engagement of family forest owners.</p>
+	<div class="unit xs-1 s-1 m-3-4 l-1-3">
+		<div class="video"><iframe class="gutter" src="//player.vimeo.com/video/78736855?color=88AE50&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/78736855">Meet American Forest Foundation</a> from <a href="http://vimeo.com/americanforestfoundation">American Forest Foundation</a> on <a href="https://vimeo.com">Vimeo</a></p>
+		</div>
+	</div>
+</div>
