--- a/media.html
+++ b/media.html
@@ -6,22 +6,73 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 ---
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+
 	<h1>Partners &amp; Media</h1>
-	
+
 	<h2>News</h2>
+	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Florida Halts Climate Change by Banning It<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>ATFS Recognizes Idaho Tree Farmer with 2015 National Leadership Award<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>ATFS Honors Paul Harwood as 2015 National Outstanding Inspector of the Year<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+	</div>		
+</div>
 
-	[ IMAGE BUCKET SLIDERS? ]
-	AFF is pleased to announce that Michael Law, U.S. CEO of Burson-Marsteller, has been named to the Board of Trustees of the American Forest Foundation. Burson-Marsteller, established in 1953, is a leading global public relations and communications firm.
-	>Read More
-	AFF announces climate commitment in conjunction with the White House
-	Today President Obama announced natural resource-related actions the administration will pursue under the President’s Climate Action Plan, which place unprecedented focus on the potential for U.S. forests and forest products to mitigate the effects of climate change.
-	>Read More
-	
-	<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object">
-	<a href="#" class="atom"><img src="http://placehold.it/250x200" alt="test"></a>
-	<figcaption class="">Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF <br />
-	<a href="#" class="atom">Read More&hellip; </a></figcaption>
-	</figure>		
-	
 
+<div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
+	<h2>Reports</h2>
+	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Report: Vanishing Pieces of the Puzzle<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Report: Building with Wood<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Report: Farm Bill Update<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
+			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<figcaption>Reports ARCHIVE<br />
+				<small class="readmore">Read More&hellip; </small>
+			</figcaption>
+			</a>
+		</figure>		
+	</div>		
 </div>
