--- a/media.html
+++ b/media.html
@@ -13,31 +13,30 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Florida Halts Climate Change by Banning It<br />
-				<small class="readmore">Read More&hellip; </small>
-			</figcaption>
+				<figcaption>Florida Halts Climate Change by Banning It
+				</figcaption>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>ATFS Recognizes Idaho Tree Farmer with 2015 National Leadership Award<br />
-				<small class="readmore">Read More&hellip; </small>
-			</figcaption>
+				<figcaption>ATFS Recognizes Idaho Tree Farmer with 2015 National Leadership Award
+				</figcaption>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>ATFS Honors Paul Harwood as 2015 National Outstanding Inspector of the Year<br />
-				<small class="readmore">Read More&hellip; </small>
-			</figcaption>
+				<figcaption>ATFS Honors Paul Harwood as 2015 National Outstanding Inspector of the Year
+					<p>WASHINGTON, D.C. - The American Tree Farm System&reg; (ATFS) is pleased to recognize Paul Harwood of Tunbridge, Vermont as the 2015 National Outstanding Inspector of the Year. Harwood was selected from among four regional winners for his exceptional on-the-ground work with family forest owners in Vermont and continued commitment the American Tree Farm System. </p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF<br />
-				<small class="readmore">Read More&hellip; </small>
-			</figcaption>
+				<figcaption>Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF
+				</figcaption>
 			</a>
+			<small class="readmore"><p>Read More&hellip;</p></small>
 		</figure>		
 	</div>		
 </div>
@@ -49,28 +48,28 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 			<figcaption>Report: Vanishing Pieces of the Puzzle<br />
-				<small class="readmore">Read More&hellip; </small>
+				<small class="readmore"><p>Read More&hellip;</p></small>
 			</figcaption>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 			<figcaption>Report: Building with Wood<br />
-				<small class="readmore">Read More&hellip; </small>
+				<small class="readmore"><p>Read More&hellip;</p></small>
 			</figcaption>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 			<figcaption>Report: Farm Bill Update<br />
-				<small class="readmore">Read More&hellip; </small>
+				<small class="readmore"><p>Read More&hellip;</p></small>
 			</figcaption>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 			<figcaption>Reports ARCHIVE<br />
-				<small class="readmore">Read More&hellip; </small>
+				<small class="readmore"><p>Read More&hellip;</p></small>
 			</figcaption>
 			</a>
 		</figure>		
