feat(p&m): content fill for newsboxes

--- a/media.html
+++ b/media.html
@@ -14,13 +14,17 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 				<figcaption>Florida Halts Climate Change by Banning It
+					<p>In a stunning act, the state of Florida has single-handedly eradicated climate change. This bold move to ban the words <em>climate change</em> and <em>global warming</em> from being uttered has led to sweeping changes&mdash;the complete breakdown of global ecosystems has achieved stability, species loss has all but stopped, ice formation has increased to their pre-industrial era levels. Humans are once again free to completely screw the planet over in ways unimaginable. Thank you, Florida. Thank you.</p>
 				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 				<figcaption>ATFS Recognizes Idaho Tree Farmer with 2015 National Leadership Award
+				<p>WASHINGTON, D.C. - The American Tree Farm System &reg; (ATFS) is pleased to recognize Idaho Tree Farmer and forester, Kirk David with its 2015 National Leadership Award. In front of more than 150 ATFS committee volunteer leaders from all across the country, David was presented with this award, which recognizes the efforts of extraordinary volunteers, the backbone of ATFS, who have been instrumental in accomplishing ATFS reinspections, motivating volunteers, and educating family forest owners.</p>
 				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
@@ -34,9 +38,10 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
 				<figcaption>Burson-Marsteller U.S. CEO Michael Law Named to the Board of AFF
+					<p>AFF is pleased to announce that Michael Law, U.S. CEO of Burson-Marsteller,  has been named to the Board of Trustees of the American Forest Foundation. Burson-Marsteller, established in 1953, is a leading global public relations and communications firm.</p>
 				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
-			<small class="readmore"><p>Read More&hellip;</p></small>
 		</figure>		
 	</div>		
 </div>
@@ -47,30 +52,34 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Report: Vanishing Pieces of the Puzzle<br />
-				<small class="readmore"><p>Read More&hellip;</p></small>
-			</figcaption>
+				<figcaption>Report: Vanishing Pieces of the Puzzle
+					<p>America's forests are home to an astonishing variety of life, from sweetly singing songbirds and roaming black bears to migrating salmon and unique pitcher plants. These forests provide humans with immense benefits: wood to build our homes; clean, healthy water for drinking and for trout streams; space for recreation and hunting; and carbon storage to combat climate change.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Report: Building with Wood<br />
-				<small class="readmore"><p>Read More&hellip;</p></small>
-			</figcaption>
+				<figcaption>Report: Building with Wood
+					<p>Wood is the building material of the future&mdash;versatile, beautiful, and durable. And, thanks to advances in wood design and engineering, wood is being used in new and exciting ways to build taller multi-story structures.  Large public buildings like arenas, gymnasiums, office buildings, and apartment complexes can be constructed from wood.  New  wood products, like Cross Laminated Timber and Glulam, are changing the face of construction, allowing taller wood buildings.  Wood.  It’s a better way to build.  </p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Report: Farm Bill Update<br />
-				<small class="readmore"><p>Read More&hellip;</p></small>
-			</figcaption>
+				<figcaption>Report: Farm Bill Update
+					<p>Farm Bill Conservation programs have been instrumental in increasing the availability of conservation tools for forest owners and have resulted in real stewardship improvements on the ground.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
-			<figcaption>Reports ARCHIVE<br />
-				<small class="readmore"><p>Read More&hellip;</p></small>
-			</figcaption>
+				<figcaption>Reports ARCHIVE
+					<p>View previously released reports.</p>
+				</figcaption>
+				<small class="readmore">Continue Reading&hellip;</small>
 			</a>
 		</figure>		
 	</div>		
