feat(images): add imagery
+ images for news box  content

--- a/media.html
+++ b/media.html
@@ -12,7 +12,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<h2>News</h2>
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/florida.png" alt="test">
 				<figcaption>Florida Halts Climate Change by Banning It
 					<p>In a stunning act, the state of Florida has single-handedly eradicated climate change. This bold move to ban the words <em>climate change</em> and <em>global warming</em> from being uttered has led to sweeping changes&mdash;the complete breakdown of global ecosystems has achieved stability, species loss has all but stopped, ice formation has increased to their pre-industrial era levels. Humans are once again free to completely screw the planet over in ways unimaginable. Thank you, Florida. Thank you.</p>
 				</figcaption>
@@ -20,7 +20,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/davids.jpg" alt="test">
 				<figcaption>ATFS Recognizes Idaho Tree Farmer with 2015 National Leadership Award
 				<p>WASHINGTON, D.C. - The American Tree Farm System &reg; (ATFS) is pleased to recognize Idaho Tree Farmer and forester, Kirk David with its 2015 National Leadership Award. In front of more than 150 ATFS committee volunteer leaders from all across the country, David was presented with this award, which recognizes the efforts of extraordinary volunteers, the backbone of ATFS, who have been instrumental in accomplishing ATFS reinspections, motivating volunteers, and educating family forest owners.</p>
 				</figcaption>
@@ -28,7 +28,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/harwood.jpg" alt="test">
 				<figcaption>ATFS Honors Paul Harwood as 2015 National Outstanding Inspector of the Year
 					<p>WASHINGTON, D.C. - The American Tree Farm System&reg; (ATFS) is pleased to recognize Paul Harwood of Tunbridge, Vermont as the 2015 National Outstanding Inspector of the Year. Harwood was selected from among four regional winners for his exceptional on-the-ground work with family forest owners in Vermont and continued commitment the American Tree Farm System. </p>
 				</figcaption>
@@ -51,7 +51,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 	<h2>Reports</h2>
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/map-puzzle.jpg" alt="test">
 				<figcaption>Report: Vanishing Pieces of the Puzzle
 					<p>America's forests are home to an astonishing variety of life, from sweetly singing songbirds and roaming black bears to migrating salmon and unique pitcher plants. These forests provide humans with immense benefits: wood to build our homes; clean, healthy water for drinking and for trout streams; space for recreation and hunting; and carbon storage to combat climate change.</p>
 				</figcaption>
@@ -59,7 +59,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/wood-building.jpg" alt="test">
 				<figcaption>Report: Building with Wood
 					<p>Wood is the building material of the future&mdash;versatile, beautiful, and durable. And, thanks to advances in wood design and engineering, wood is being used in new and exciting ways to build taller multi-story structures.  Large public buildings like arenas, gymnasiums, office buildings, and apartment complexes can be constructed from wood.  New  wood products, like Cross Laminated Timber and Glulam, are changing the face of construction, allowing taller wood buildings.  Wood.  It’s a better way to build.  </p>
 				</figcaption>
@@ -67,7 +67,7 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 			</a>
 		</figure>		
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
-			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
+			<a href="#" class="wrap"><img src="images/farm-bill.jpg" alt="test">
 				<figcaption>Report: Farm Bill Update
 					<p>Farm Bill Conservation programs have been instrumental in increasing the availability of conservation tools for forest owners and have resulted in real stewardship improvements on the ground.</p>
 				</figcaption>
