--- a/media.html
+++ b/media.html
@@ -86,11 +86,15 @@ meta-keywords: about, work, environmental, education forest, american, america, 
 </div>
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
-	<h2 id="reports">Media</h2>
+	<h2 id="media">Media</h2>
+	<p>Learn about what we do, our history, financial statements, and what companies we affilate with in our media kit.</p>
+	<div class="wrap center-object">
+		<a href="#" class="donate-button unit-s-1 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-6 center-text">Download Media Kit</a>
+	</div>
 </div>
 
 <div class="unit-xs-1 unit-s-1 unit-m-3-5 unit-l-3-4 unit-xl-3-4 unit-xxl-5-7 center-object">
-	<h2 id="reports">Woodland Magazine</h2>
+	<h2 id="woodland">Woodland Magazine</h2>
 	<div class="boxcontainer unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<figure class="unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-3 unit-xl-1-4 unit-xxl-1-4 center-object newsbox">
 			<a href="#" class="wrap"><img src="http://placehold.it/250x200" alt="test">
